--- a/templates/secretaire/all-student.html.twig
+++ b/templates/secretaire/all-student.html.twig
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="fonts/flaticon.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <script src="js/modernizr-3.6.0.min.js"></script>
 </head>
 
